<resources>
    <string name="app_name">TestAndroid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="_1">1.</string>
    <string name="status">Status</string>
    <string name="active">active</string>
    <string name="inactive">inactive</string>
    <string name="tags">Tags</string>
    <string name="description">Description</string>
    <string name="team_members">Team Members</string>
    <string name="name">Name</string>
    <string name="position">Position</string>
</resources>