<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.coin_detail.CoinDetailFragment"
    android:layout_marginHorizontal="@dimen/margin_medium1"
    android:layout_marginVertical="@dimen/margin_small2">

    <TextView
        android:id="@+id/number"
        style="@style/BaseText.LargeTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        style="@style/BaseText.LargeTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_marginStart="@dimen/margin_small2"
        app:layout_constraintStart_toEndOf="@id/number"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status"
        style="@style/BaseText.Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        style="@style/BaseText.Title1"
        android:layout_marginTop="@dimen/margin_medium1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/tags_title"
        style="@style/BaseText.LargeTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium1"
        android:text="@string/tags"
        app:layout_constraintStart_toStartOf="@+id/description"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tags_title"
        tools:listitem="@layout/item_tag"/>

    <TextView
        android:id="@+id/team_members_title"
        style="@style/BaseText.LargeTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium1"
        android:text="@string/team_members"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tags" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/team_members"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_members_title"
        tools:listitem="@layout/item_team_member"/>

</androidx.constraintlayout.widget.ConstraintLayout>